Change secure booking screen h1 text

--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -6,7 +6,7 @@
 
 @model BookingViewModel
 
-<h1 class="display-4">Book a visit to view our documents</h1>
+<h1 class="display-4">2. Enter your reader's ticket</h1>
 
 <div class="text-center">
 
