Change booking confirmation screen h1 text

--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -4,7 +4,7 @@
 }
 @model BookingViewModel
 
-<h1 class="display-4">Book a visit to view our documents</h1>
+<h1 class="display-4">3. Reservation confirmation</h1>
 
 <div class="text-center">
 
