Update copy on order form screen

--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -6,21 +6,28 @@
 
 @model BookingViewModel
 
-<h1 class="display-4">Book a visit to view our documents</h1>
+<h1 class="display-4">4. Order documents for your visit</h1>
 
 <div class="text-center">
 
     <section class="container">
 
-        <div class="container-heading">
-            <h2>Order documents for your visit</h2>
-        </div>
-
-        <section class="booking-details">
+        <section class="booking-details container-heading">
             <div class="row">
-                <h3>Your booking details</h3>
+                <div class="col-md-6">
+                    <p>
+                        You have a provisional reservation for a visit to the reading rooms. Complete the reservation by using this form
+                        to pre-order original documents held by The National Archives.
+                    </p>
+                    <p>
+                        Return to this form at any time before the deadline below using the link from your confirmation email. Once the
+                        date has passed, further amendments won’t be possible as we will begin preparing your order ready for your visit.
+                        If you do not complete your booking before the deadline, your visit will be cancelled automatically.
+                    </p>
+                </div>
 
                 <div class="col-md-6">
+                    <h2>Your reservation details</h2>
                     <table class="table">
                         <tbody>
                             <tr>
@@ -37,7 +44,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <a href="/">Cancel this booking ></a>
+                    <a href="#">Cancel this booking ></a>
                 </div>
             </div>
         </section>
