--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -38,11 +38,11 @@
 
     <main role="main" class="pb-3">
         <div class="container">
-            @await Html.PartialAsync("_Breadcrumbs")
+            @await Html.PartialAsync("Partials/_Breadcrumbs")
             @RenderBody()
         </div>
     </main>
 
-    @await Html.PartialAsync("_Footer")
+    @await Html.PartialAsync("Partials/_Footer")
 </body>
 </html>
