--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -2,10 +2,6 @@
     background-color: #eee;
 }
 
-.button:focus {
-    color: #fff;
-}
-
 a.button {
     margin-bottom: 1em;
     text-decoration: none;
@@ -18,6 +14,14 @@ section.container {
 
     .container-heading, .container-heading-text {
         margin-top: 2em;
+    }
+}
+
+form {
+    input[type=checkbox] {
+        float: left;
+        margin-top: 4px;
+        margin-right: 0.5em;
     }
 }
 
@@ -54,14 +58,24 @@ section.container {
             min-width: 205px
         }
 
-        a:before {
-            content: "< ";
+        span {
+            a:before {
+                content: "< ";
+            }
+
+            button:after {
+                content: " >";
+            }
         }
 
-        button:after {
-            content: " >";
+        #conditions {
+            text-align: left;
         }
     }
+}
+
+.button:focus {
+    color: #fff;
 }
 
 .date-selection {
@@ -99,6 +113,11 @@ section.container {
 .order-form {
     fieldset {
         margin-top: 2em;
+        text-align: left;
+
+        &:last-of-type {
+            margin-bottom: 2em !important;
+        }
     }
 
     legend, p {
@@ -139,15 +158,14 @@ section.container {
     }
 }
 
-#computer-only {
-    background-color: #fff;
-    border: 2px #ddd solid;
-    padding-bottom: 1em;
-}
-
 .order-options + section {
     clear: both;
 }
+
+.primary:focus {
+    color: #000;
+}
+
 
 .reader-ticket-form {
     margin: 2em 0;
@@ -182,12 +200,10 @@ section.container {
     border: 5px solid #ddd;
     padding: 1em 0;
 
-    a {
-        margin-top: 1em;
-    }
-
     p {
-        margin-bottom: 0;
+        margin: 1em 0;
+        padding-left: 4em;
+        padding-right: 4em;
     }
 }
 
@@ -206,38 +222,50 @@ section.container {
     }
 }
 
-#availability-form {
-    div {
-        ul {
-            li {
-                list-style: none;
-                text-align: right;
+#additional-reqs {
+    border: 2px solid #26262a;
+    min-height: 200px;
+    min-width: 50%;
+    padding: .6em;
+}
+
+#conditions {
+    margin-bottom: 2em !important;
+
+    input[type=checkbox] {
+        margin-top: 6px;
+    }
+}
+
+#date-selection {
+    ul {
+        li.date {
+            list-style: none;
+
+            a {
+                color: #000;
+                display: flex;
+                background-color: #eee;
+                padding: 10px 20px;
+                font-family: "Roboto Mono",sans-serif;
+                font-size: 16px;
+                border: 2px solid #ddd;
+                margin-bottom: 1em;
+                text-decoration: none;
+
+                &:focus {
+                    background-color: #000;
+                    color: #fff;
+                    outline: 5px solid #1d70b8;
+                }
+
+                &:hover {
+                    background-color: #000;
+                    color: #fff;
+                    outline: none;
+                }
             }
-        }
-    }
 
-    #dates {
-        label {
-            display: flex;
-            background-color: #eee;
-            padding: 10px 20px;
-            font-family: "Roboto Mono", sans-serif;
-            font-size: 16px;
-            border: 2px solid #ddd;
-            margin-bottom: 1em;
-        }
-    }
-
-    #dates {
-        label:hover {
-            background-color: #000;
-            color: #fff;
-            cursor: pointer;
-        }
-    }
-
-    #dates {
-        label {
             span:first-child {
                 text-align: left;
             }
@@ -247,27 +275,6 @@ section.container {
             }
         }
     }
-
-    #dates {
-        input[type=radio] {
-            opacity: 0;
-            position: fixed;
-            width: 0;
-        }
-    }
-
-    #dates {
-        input[type=radio]:focus + label {
-            outline: 5px solid #1d70b8;
-        }
-    }
-
-    #dates {
-        input[type=radio]:checked + label {
-            background-color: #000;
-            color: #fff;
-        }
-    }
 }
 
 #booking-date {
@@ -275,11 +282,19 @@ section.container {
     font-weight: bolder;
 }
 
-#room-selection {
-    border-bottom: 2px solid #eee;
+#progress-bar {
+    margin: 2em 0;
+
+    ul {
+        li {
+            display: inline;
+            list-style: none;
+            margin: 1em;
+        }
+    }
 }
 
-#room-selection, #visit-selection {
+#room-selection {
     margin-top: 2em;
 
     fieldset:last-child {
@@ -287,11 +302,7 @@ section.container {
     }
 }
 
-#visit-customisation-form {
-    button[type=submit] {
-        margin-bottom: 2em;
-    }
-
+#room-selection-form {
     fieldset {
         div {
             text-align: left;
@@ -299,7 +310,6 @@ section.container {
 
             label {
                 font-size: 18px;
-                margin-left: .5em;
                 width: 80%;
             }
         }
@@ -314,6 +324,10 @@ section.container {
             font-size: 16px;
             width: 80%;
         }
+
+        p {
+            margin-bottom: 0.5em
+        }
     }
 
     input[type=checkbox], input[type=radio] {
@@ -322,7 +336,17 @@ section.container {
 
     input[type=radio] {
         margin-top: 7px;
+        margin-right: 0.5em;
     }
+
+    button[type=submit] {
+        margin-bottom: 2em;
+    }
+}
+
+#unavailable-docs {
+    display: inline-block;
+    margin-top: 1em;
 }
 
 #visit-type-toggle {
