Use correct header partial path

--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    @await Html.PartialAsync("_Header")
+    @await Html.PartialAsync("Partials/_Header")
 
 
     <main role="main" class="pb-3">
