Amend room selection form id to fix css

--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -29,7 +29,7 @@
 
         <section>
             <div class="row">
-                <form id="visit-customisation-form" action="@Url.Action("Availability", "Home", new { orderType = @Model.ToStringURL() } )" method="POST">
+                <form id="room-selection-form" action="@Url.Action("Availability", "Home", new { orderType = @Model.ToStringURL() } )" method="POST">
                     <div class="col-md-4 col-sm-4">
                         <section id="room-selection">
                             <fieldset>
