Update homepage copy and styling

--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h1 class="display-4">Book a visit to view our documents</h1>
 
-<div class="text-center">
+<div id="home" class="text-center">
 
     <section class="container">
 
@@ -14,8 +14,19 @@
                 <p>
                     To reserve a place, you will need your reader's ticket number and to know how many documents you would like to see.
                     You can then choose an available date to view documents in our reading rooms. You can book a maximum of two visits
-                    per month. See our Terms and Conditions for more details. <a href="">More information about how to book and what to expect ></a>
+                    per month. See our Terms and Conditions for more details.
                 </p>
+                <a href="#">More information about how to book and what to expect ></a>
+            </div>
+        </section>
+
+        <section class="prompt-white">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Before you book</h2>
+                    <p>You will need a reader’s ticket number to complete the booking</p>
+                    <a href="#">Register or renew a reader’s ticket</a>
+                </div>
             </div>
         </section>
 
@@ -30,9 +41,9 @@
                             </div>
 
                             <ul>
+                                <li>Documents can be from <span class="bold-text">multiple series</span>, e.g. ADM 22 and C 142</li>
                                 <li>1-day visit</li>
-                                <li>Up to 12 documents for 1 day <span class="bold-text">or</span> 24 documents for 2 days</li>
-                                <li>Documents can be from different series, e.g. ADM 22 and C 142</li>
+                                <li>Up to 12 documents</li>
                                 <li>Computer access available</li>
                             </ul>
 
@@ -50,9 +61,9 @@
                             </div>
 
                             <ul>
+                                <li>Documents have to be from <span class="bold-text">one series</span>, e.g. ADM 22</li>
                                 <li>2-day visit</li>
                                 <li>Between 20 - 40 documents</li>
-                                <li>Documents have to be from the same series, e.g. ADM 1 - ADM 20</li>
                                 <li>Computer access available</li>
                             </ul>
 
