--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -14,19 +14,23 @@
 
         <section class="booking-details container-heading">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <p>
-                        You have a provisional reservation for a visit to the reading rooms. Complete the reservation by using this form
-                        to pre-order original documents held by The National Archives.
+                        You have a provisional reservation for a visit to the reading rooms. Complete this form to pre-order original
+                        documents held by The National Archives.
                     </p>
                     <p>
-                        Return to this form at any time before the deadline below using the link from your confirmation email. Once the
-                        date has passed, further amendments won’t be possible as we will begin preparing your order ready for your visit.
-                        If you do not complete your booking before the deadline, your visit will be cancelled automatically.
+                        If you do not complete this step by <span class="bold-text">23:59 BST on Monday 30 March</span> your visit will be automatically cancelled.
+                        A direct link to this form is also in your confirmation email, so you can return to amend or complete your
+                        document order at any point before <span class="bold-text">23:59 BST on Monday 30 March</span>. Check your spam and junk email folders.
+                    </p>
+                    <p>
+                        Once this date has passed, you can't change your document order as we will begin preparing your order for your
+                        visit.
                     </p>
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <h2>Your reservation details</h2>
                     <table class="table">
                         <tbody>
