--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
+
+    <script>document.getElementsByTagName("html")[0].className = "js";</script>
+
     <link rel='stylesheet'
           id='tna-parent-styles-css'
           href='~/css/compiled-css/base-sass.min.css'
@@ -44,5 +47,10 @@
     </main>
 
     @await Html.PartialAsync("Partials/_Footer")
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
+    <script src="~/js/mega-menu.js"></script>
 </body>
 </html>
