--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -12,6 +12,20 @@
 
     <section class="container">
 
+        <section id="progress-bar">
+            <div class="row">
+                <div class="text-center">
+                    <ol>
+                        <li><span class="step-number">1</span> <span class="step">Select a date</span></li>
+                        <li class="active"><span class="step-number">2</span> <span class="step">Enter your reader's ticket</span></li>
+                        <li><span class="step-number">3</span> <span class="step">Reservation confirmation</span></li>
+                        <li><span class="step-number">4</span> <span class="step">Order documents</span></li>
+                        <li><span class="step-number">5</span> <span class="step">Order complete</span></li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+
         <div class="container-heading">
             <h2>You are about to book the following space</h2>
         </div>
