--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -11,6 +11,21 @@
 <div class="text-center">
 
     <section class="container">
+
+        <section id="progress-bar">
+            <div class="row">
+                <div class="text-center">
+                    <ol>
+                        <li class="active"><span class="step-number">1</span> <span class="step">Select a date</span></li>
+                        <li><span class="step-number">2</span> <span class="step">Enter your reader's ticket</span></li>
+                        <li><span class="step-number">3</span> <span class="step">Reservation confirmation</span></li>
+                        <li><span class="step-number">4</span> <span class="step">Order documents</span></li>
+                        <li><span class="step-number">5</span> <span class="step">Order complete</span></li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+
         <section>
             <div class="row">
                 <div class="col-md-4 col-sm-4">
