Remove camera stand parameter from links

--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -81,70 +81,70 @@
                     <div class="col-md-8 col-sm-8">
                         <ul>
                             <li class="date">
-                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard&cameraStand=true">
+                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard">
 
                                     <span class="col-md-6">Tuesday 15 February</span>
                                     <span class="col-md-6">X places available</span>
                                 </a>
                             </li>
                             <li class="date">
-                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard&cameraStand=true">
+                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard">
 
                                     <span class="col-md-6">Wednesday 16 February</span>
                                     <span class="col-md-6">X places available</span>
                                 </a>
                             </li>
                             <li class="date">
-                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard&cameraStand=true">
+                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard">
 
                                     <span class="col-md-6">Thursday 17 February</span>
                                     <span class="col-md-6">X places available</span>
                                 </a>
                             </li>
                             <li class="date">
-                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard&cameraStand=true">
+                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard">
 
                                     <span class="col-md-6">Friday 18 February</span>
                                     <span class="col-md-6">X places available</span>
                                 </a>
                             </li>
                             <li class="date">
-                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard&cameraStand=true">
+                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard">
 
                                     <span class="col-md-6">Saturday 19 February</span>
                                     <span class="col-md-6">X places available</span>
                                 </a>
                             </li>
                             <li class="date">
-                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard&cameraStand=true">
+                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard">
 
                                     <span class="col-md-6">Tuesday 22 February</span>
                                     <span class="col-md-6">X places available</span>
                                 </a>
                             </li>
                             <li class="date">
-                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard&cameraStand=true">
+                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard">
 
                                     <span class="col-md-6">Wednesday 23 February</span>
                                     <span class="col-md-6">X places available</span>
                                 </a>
                             </li>
                             <li class="date">
-                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard&cameraStand=true">
+                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard">
 
                                     <span class="col-md-6">Thursday 24 February</span>
                                     <span class="col-md-6">X places available</span>
                                 </a>
                             </li>
                             <li class="date">
-                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard&cameraStand=true">
+                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard">
 
                                     <span class="col-md-6">Friday 25 February</span>
                                     <span class="col-md-6">X places available</span>
                                 </a>
                             </li>
                             <li class="date">
-                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard&cameraStand=true">
+                                <a href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()?orderType=@Model.ToStringURL()&readingRoom=standard">
 
                                     <span class="col-md-6">Saturday 26 February</span>
                                     <span class="col-md-6">X places available</span>
